[package]
name = "nova_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features=["rt-multi-thread"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twitch-irc = "5.0.0"
